# cmake-juce-react

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
client/: .prettierrc  package.json  pnpm-lock.yaml  tsconfig.app.json
client/src/: App.tsx  juce.d.ts
client/src/components/: Clicker.tsx
client/src/util/juce/: COMMANDS.ts  juce.ts
scripts/: config.sh  install_juce.sh
src/: CONSTANTS.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/ipc/: Routes.cpp  Routes.h
src/utils/: ZipUtils.cpp  ZipUtils.h  json.h
